---
  title: Service architecture
---
classDiagram
  api ..* api-port : Composition
  api-port <|.. Application : Realization
  Order <-- Application : Association
  Application ..> db-port : Dependency
  Application ..> payment-port : Dependency
  db-port <|.. db : Realization
  payment-port <|.. payment : Realization
  class api {
    <<Adapter>>
    api  port.API
	  port int
    Create(CreateOrderRequest) (CreateOrderResponse, error)
    Run()
  }
  class api-port {
    <<Interface>>
    PlaceOrder(order domain.Order) (domain.Order, error)
  }
  class Application {
    <<Core>>
    db      port.DB
	  payment port.Payment
    PlaceOrder(order domain.Order) (domain.Order, error)
  }
  class Order {
    <<Domain>>
    Order
    OrderItem
    TotalPrice() float32
  }
  class db-port {
    <<Interface>>
    Get(id string) (Order, error)
	  Save(*domain.Order) error
  }
  class payment-port {
    <<Interface>>
    Charge(*domain.Order) error
  }
  class db {
    <<Adapter>>
    db *gorm.DB
    Get(id string) (domain.Order, error)
    Save(order *domain.Order) error
  }
  class payment {
    <<Adapter>>
    payment payment.PaymentClient
    Charge(order *domain.Order) error
  }